Remove localStorage and rely on Firestore

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "swizz",
   "version": "1.0.0",
-  "description": "This small website displays an interactive map using [Leaflet](https://leafletjs.com/). Users can save their age and gender in the profile page and place a single pin on the map. All information is stored in the browser's `localStorage`.",
+  "description": "This small website displays an interactive map using [Leaflet](https://leafletjs.com/). Users can save their age and gender in the profile page and place a single pin on the map. All information is saved in Firebase Firestore.",
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
